# AdaptiveCompanion

./: .gitignore  Dockerfile  TODO  config.py  docker-compose.yaml  flows.py  llm.py  main.py  memory.py  messages.py  prompts.py  pyproject.toml
backend/: Dockerfile  entrypoint.sh
backend/app/: config.py  db.py  flows.py  llm.py  main.py  memory.py  messages.py  prompts.py
frontend/: Dockerfile
frontend/app/: main.py  styles.tcss
