[project]
name = "adaptivecompanion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "humanize>=4.15.0",
    "mypy>=1.19.1",
    "openai>=2.26.0",
    "orjson>=3.11.7",
    "pocketflow>=0.0.3",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
    "types-pyyaml>=6.0.12.20250915",
]
