[project]
name = "adaptivecompanion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.15.0",
    "fastapi[standard]>=0.135.1",
    "humanize>=4.15.0",
    "mypy>=1.19.1",
    "openai>=2.26.0",
    "orjson>=3.11.7",
    "password-strength>=0.0.3.post2",
    "pocketflow>=0.0.3",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
    "types-pyyaml>=6.0.12.20250915",
    "uvicorn>=0.41.0",
]
